<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
    android:id="@+id/start_main_activity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/start_main_activity"/>

    <Button
        android:id="@+id/return_main_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_main_activity"/>
    <Button
        android:id="@+id/start_my_http_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_my_http_activity"/>

</LinearLayout>